# Book-Reading-GUI-app

./: LICENSE  README.md  pyproject.toml
src/: button.py  data.py  main.py
src/Functionality_UI_Data/: Data.py  UI.py  functionality.py
src/UI_Func_Data_AddFile/: Data.py  UI.py  functionality.py
src/openDialog/: Addurl.py
src/pdfreader/openDialog/: Addurl.py
src/pdfreader/utils/: UI.py  functionality.py
src/pdfreading/: main.py
src/pdfreading/openDialog/: Addurl.py
src/pdfreading/utils/: UI.py  functionality.py
src/utils/: UI.py  functionality.py
