[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pdfreading-app"
version = "0.1.0"
description = "A PDF reader desktop app"
requires-python = ">=3.9"
dependencies = [
    "pillow",
    "pymupdf",
    "customtkinter"
]

[project.scripts]
pdfreading-app = "pdfreading.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/pdfreading"]